--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	
 <link rel="stylesheet" href="style.css">
-	
+
 </head>
 
 <body>
@@ -21,6 +21,6 @@
   </section>
 </main>
 	
-	
+<script src="main.js"></script>
 </body>
 </html>
